--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url = jdbc:mysql://localhost:3306/crudusers?useSSL=false&serverTimezone=UTC
+spring.datasource.url = jdbc:mysql://localhost:3306/Tickets?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=update
