--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
 	</parent>
 	<groupId>com.sai.app</groupId>
 	<artifactId>restful-crud-api</artifactId>
+	<packaging>war</packaging>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>restful-crud-api</name>
 	<description>Sample Crud Rest API</description>
